--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,6 +63,8 @@
                 android:layout_weight="0.85"
                 android:hint="@string/mobile_number"
                 android:maxLength="10"
+                android:inputType="number"
+                android:maxLines="1"
                 android:background="@null"/>
 
         </LinearLayout>
