--- a/app/src/main/res/layout/fragment_locate_parcel.xml
+++ b/app/src/main/res/layout/fragment_locate_parcel.xml
@@ -18,12 +18,53 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_topLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+            <LinearLayout
+                android:id="@+id/searchLayout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toTopOf="parent"
+
+                android:layout_margin="10dp"
+                android:background="@drawable/search_background">
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:src="@drawable/search_img"
+                    app:tint="@color/black"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"/>
+
+                <EditText
+                    android:id="@+id/et_searchView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:textSize="14sp"
+                    android:inputType="textCapSentences"
+                    android:textColor="@color/black3"
+                    android:textColorHint="@color/gray"
+                    android:fontFamily="@font/poppins_regular"
+                    android:hint="Search products..."
+                    android:layout_marginStart="10dp"/>
+
+            </LinearLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_cargo"
             android:layout_width="match_parent"
             android:layout_height="140dp"
             android:background="@drawable/round_border"
             android:backgroundTint="@color/purple"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cl_topLayout"
             android:layout_marginTop="10dp"
             >
             <TextView
@@ -107,8 +148,9 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/layout_cargo"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="15dp"
             android:id="@+id/layout_parcelStatus">
 
@@ -122,6 +164,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_data"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="10dp"
