--- a/app/src/main/res/layout/fragment_our_network.xml
+++ b/app/src/main/res/layout/fragment_our_network.xml
@@ -56,6 +56,7 @@
 
                 android:textSize="14sp"/>
         </LinearLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/cv_select"
             android:layout_width="match_parent"
@@ -98,7 +99,7 @@
                 android:id="@+id/layout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/purple"
+                android:background="@drawable/tag_boarder"
                 app:layout_constraintTop_toTopOf="parent"
                 >
 
@@ -137,10 +138,10 @@
                 android:layout_below="@+id/layout1"
                 />
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_stat"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:listitem="@layout/list_network"
-
                 android:layout_below="@+id/view2"/>
         </RelativeLayout>
 
