--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="black2">#171616</color>
+    <color name="black3">#292424</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#952CAE</color>
     <color name="light_purple">#E3B4ED</color>
     <color name="extra_light_purple">#4FBF6FD1</color>
     <color name="light_purple1">#90589C</color>
+    <color name="graylight">#FBFAFA</color>
     <color name="gray">#B8B8B8</color>
     <color name="darkgray">#9C9898</color>
+    <color name="darkGray">#A5A5A5</color>
+    <color name="midiomGray2">#4DE3E3E3</color>
 </resources>
