--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,12 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:padding="30dp"
     tools:context=".ui.SplashActivity">
 <ImageView
+    android:id="@+id/iv_logo"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:src="@drawable/logo"
+    android:src="@drawable/logonew"
+        android:layout_marginTop="60dp"
+android:layout_marginStart="30dp"
+    android:layout_marginEnd="30dp"
+    android:padding="5dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"/>
+
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:src="@drawable/splash"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_editor_absoluteY="-50dp"
+      />
 </androidx.constraintlayout.widget.ConstraintLayout>
