--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/cv_recent_transaction"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="120dp"
+                android:layout_height="110dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp"
                 app:cardUseCompatPadding="true"
@@ -68,7 +68,7 @@
                 android:id="@+id/cv_locate"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="120dp"
+                android:layout_height="110dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp"
                 app:cardUseCompatPadding="true"
@@ -84,7 +84,7 @@
                         android:id="@+id/iv_locate"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/locate"
+                        android:src="@drawable/tracking"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -117,7 +117,7 @@
                 android:id="@+id/cv_network"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="120dp"
+                android:layout_height="110dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp"
                 app:cardUseCompatPadding="true"
@@ -155,7 +155,7 @@
                 android:id="@+id/cv_announcement"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="120dp"
+                android:layout_height="110dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp"
                 app:cardUseCompatPadding="true"
@@ -203,7 +203,7 @@
                 android:id="@+id/cv_helpline"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="120dp"
+                android:layout_height="110dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp"
                 app:cardUseCompatPadding="true"
