--- a/app/src/main/res/layout/fragment_our_network.xml
+++ b/app/src/main/res/layout/fragment_our_network.xml
@@ -19,11 +19,12 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
-            app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/layout_selectWise"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:weightSum="1">
             <TextView
                 android:id="@+id/tv_stateWise"
@@ -60,8 +61,8 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/cv_select"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:hint="Select State"
+            android:layout_height="wrap_content"
+            android:hint="Select City"
             android:layout_marginTop="20dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             app:shapeAppearance="@style/Rounded"
@@ -80,19 +81,22 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
-            android:id="@+id/tv_heading"
+            android:id="@+id/tv_headings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="List of state"
+            android:text="List of city"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@+id/cv_select"
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
             android:textSize="16sp"/>
 
         <RelativeLayout
+            android:id="@+id/layout_result"
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tv_heading"
+            app:layout_constraintTop_toBottomOf="@+id/tv_headings"
             android:layout_marginTop="10dp"
             android:background="@drawable/border">
             <RelativeLayout
@@ -105,7 +109,7 @@
 
                 <TextView
                     android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:text="State Name"
                     android:layout_centerVertical="true"
@@ -118,7 +122,7 @@
                     android:layout_height="34dp"
                     android:background="@color/black"
                     android:layout_toRightOf="@+id/tv_name"
-                    android:layout_marginStart="40.6dp"/>
+                    android:layout_marginStart="50dp"/>
                 <TextView
                     android:id="@+id/tv_no"
                     android:layout_width="wrap_content"
@@ -140,7 +144,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_stat"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 tools:listitem="@layout/list_network"
                 android:layout_below="@+id/view2"/>
         </RelativeLayout>
