--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -2,24 +2,26 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <ImageView
         android:id="@+id/iv_back"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@drawable/back"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="15dp"
         android:visibility="visible"
+        android:padding="3dp"
         app:tint="@color/white"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/tv_heading"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textColor="@color/white"
@@ -29,6 +31,18 @@
         app:layout_constraintStart_toEndOf="@+id/iv_back"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+
+    <ImageView
+        android:id="@+id/iv_img"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/back"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="8dp"
+        android:visibility="visible"
+        android:padding="3dp"
+        app:layout_constraintStart_toEndOf="@+id/tv_heading"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
