--- a/app/src/main/res/layout/list_announcement.xml
+++ b/app/src/main/res/layout/list_announcement.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -11,9 +11,10 @@
         android:padding="10dp"
         android:background="@drawable/border">
 <TextView
+    android:id="@+id/tv_title"
     app:layout_constraintTop_toTopOf="parent"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:text="It is a long estirbalstthest sdfs sddfsddfasdf "
     android:textColor="@color/darkgray"
@@ -36,10 +37,12 @@
                 android:textColor="@color/black"
                 android:textSize="14sp"/>
             <TextView
+                android:id="@+id/tv_announceBy"
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content"
                 android:text="Rakes sharma"
+                android:gravity="end"
                 android:textColor="@color/black"
                 android:textSize="14sp"/>
         </LinearLayout>
