--- a/app/src/main/res/layout/list_network.xml
+++ b/app/src/main/res/layout/list_network.xml
@@ -13,7 +13,7 @@
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:text="Rajasthan"
             android:layout_centerVertical="true"
