--- a/app/src/main/res/layout/list_transaction.xml
+++ b/app/src/main/res/layout/list_transaction.xml
@@ -29,30 +29,32 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.8"
                     android:orientation="vertical">
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                     <TextView
+                        android:id="@+id/tv_from"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="JPR"
                         android:layout_gravity="center"
                         android:textStyle="bold"
-                        android:textSize="18sp"/>
+                        android:textSize="16sp"/>
                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:src="@drawable/cargo"/>
                     <TextView
+                        android:id="@+id/tv_To"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="GGN"
                         android:textStyle="bold"
                         android:layout_gravity="center"
-                        android:textSize="18sp"/>
+                        android:textSize="16sp"/>
                     </LinearLayout>
 
                     <TextView
@@ -65,7 +67,7 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.2"
                     android:gravity="end"
                     android:orientation="vertical">
                     <TextView
@@ -75,6 +77,7 @@
                         android:textSize="12sp"/>
 
                     <TextView
+                        android:id="@+id/tv_markNo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="658959"
@@ -84,6 +87,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/amount"
@@ -93,6 +97,7 @@
                 android:layout_marginTop="10dp"
                 android:textSize="14sp"/>
             <TextView
+                android:id="@+id/tv_payment"
                 android:layout_width="70dp"
                 android:layout_height="25dp"
                 android:textAlignment="center"
