07-05-2024 new update& api implementation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="darkgray">#9C9898</color>
     <color name="darkGray">#A5A5A5</color>
     <color name="midiomGray2">#4DE3E3E3</color>
+    <color name="red">#B50202</color>
 </resources>
