--- a/app/src/main/res/layout/fragment_help_line.xml
+++ b/app/src/main/res/layout/fragment_help_line.xml
@@ -108,7 +108,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="340dp"
+            android:layout_height="wrap_content"
             android:padding="15dp"
             android:layout_marginTop="20dp"
             android:visibility="gone"
@@ -127,45 +127,36 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/cv_subject"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:hint="Select Subject"
+                android:layout_height="wrap_content"
+                android:hint="Subject"
                 android:layout_marginTop="10dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 app:shapeAppearance="@style/Rounded"
                 app:layout_constraintTop_toBottomOf="@+id/tv_status_heading"
                 >
 
-            <AutoCompleteTextView
-                android:id="@+id/autocomplete_subject"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_subject"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:editable="false"
-                android:paddingStart="15dp"
-                android:background="@null" />
+                android:paddingStart="15dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/cv_title"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:hint="Select Title"
+                android:layout_height="wrap_content"
+                android:hint="Title"
                 android:layout_marginTop="10dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 app:shapeAppearance="@style/Rounded"
                 app:layout_constraintTop_toBottomOf="@+id/cv_subject"
                 >
 
-                <AutoCompleteTextView
-                    android:id="@+id/autocomplete_title"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_title"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:clickable="false"
-                    android:cursorVisible="false"
-                    android:editable="false"
                     android:paddingStart="15dp"
-                    android:background="@null" />
+                 />
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tl_remark"
@@ -186,6 +177,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_addGrievance"
                 android:layout_width="250dp"
                 android:layout_height="40dp"
                 android:background="@drawable/bg_button"
@@ -195,8 +187,7 @@
                 android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:textAllCaps="false"/>
+app:layout_constraintTop_toBottomOf="@+id/tl_remark"                android:textAllCaps="false"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.card.MaterialCardView
@@ -206,7 +197,7 @@
             app:cardCornerRadius="10dp"
             android:layout_marginTop="20dp"
             android:elevation="1dp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:strokeColor="@color/purple"
             app:cardBackgroundColor="@color/extra_light_purple"
            app:layout_constraintTop_toBottomOf="@+id/layout_1">
@@ -231,7 +222,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
-                    android:text="9689896656"
+                    android:text=""
                     android:gravity="center"
                     android:layout_marginTop="10dp"
                     android:textColor="@color/black"
