--- a/app/src/main/res/layout/fragment_our_network.xml
+++ b/app/src/main/res/layout/fragment_our_network.xml
@@ -111,7 +111,7 @@
                     android:id="@+id/tv_name"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:text="State Name"
+                    android:text="City Name"
                     android:layout_centerVertical="true"
                     android:textSize="12sp"
                     android:layout_marginStart="10dp"
