--- a/app/src/main/res/layout/layout_logout_dialog.xml
+++ b/app/src/main/res/layout/layout_logout_dialog.xml
@@ -47,6 +47,7 @@
                         android:id="@+id/btn_cancel"
                         style="@style/button"
                         android:text="@string/cancel"
+                        android:backgroundTint="@color/red"
                         android:layout_marginBottom="20dp"
                         android:background="@drawable/bg_button"
                         android:layout_marginEnd="5dp"/>
@@ -57,7 +58,7 @@
                         android:id="@+id/btn_logout"
                         style="@style/button"
                         android:text="@string/log_out"
-                        android:backgroundTint="@color/gray"
+                        android:backgroundTint="@color/purple"
                         android:layout_marginStart="5dp"
                         android:background="@drawable/bg_button"
                         />
