--- a/app/src/main/res/layout/list_viewnetwork.xml
+++ b/app/src/main/res/layout/list_viewnetwork.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="35dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         app:layout_constraintTop_toTopOf="parent"
         >
 
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/tv_countername"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:text="Rajasthan"
@@ -23,18 +24,22 @@
         <View
             android:id="@+id/view1"
             android:layout_width="1dp"
-            android:layout_height="34dp"
+            android:layout_height="7dp"
             android:background="@color/black"
-            android:layout_toRightOf="@+id/tv_name"
-            android:layout_marginStart="50dp"/>
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/tv_countername"
+android:rotation="-90"
+            android:layout_marginStart="10dp"/>
         <TextView
-            android:id="@+id/tv_no"
+            android:id="@+id/tv_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="09"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:gravity="center"
+            android:textSize="12sp"
+            android:padding="5dp"
             android:layout_toRightOf="@+id/view1"
             android:textColor="@color/black"/>
     </RelativeLayout>
