--- a/app/src/main/res/layout/fragment_our_network.xml
+++ b/app/src/main/res/layout/fragment_our_network.xml
@@ -1,152 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/purple"
     tools:context=".ui.network.OurNetworkFragment">
 
-    <include layout="@layout/layout_header"
-        android:id="@+id/layout_header"/>
+    <include
+        android:id="@+id/layout_header"
+        layout="@layout/layout_header" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="15dp"
         android:background="@drawable/top_border"
-        app:layout_constraintTop_toBottomOf="@+id/layout_header"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_header">
 
         <LinearLayout
             android:id="@+id/layout_selectWise"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:weightSum="1">
+            android:visibility="gone"
+            android:weightSum="1"
+            app:layout_constraintTop_toTopOf="parent">
+
             <TextView
                 android:id="@+id/tv_stateWise"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
-                android:textAlignment="center"
-                android:text="State Wise"
                 android:layout_weight="0.4"
-                android:gravity="center"
-                android:textColor="@color/white"
                 android:background="@drawable/bg_button"
+                android:gravity="center"
+                android:text="State Wise"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/layout_shipInfo"
 
-                android:textSize="14sp"/>
+                app:layout_constraintTop_toBottomOf="@+id/layout_shipInfo" />
+
             <TextView
                 android:id="@+id/tv_cityWise"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
-                android:textAlignment="center"
-                android:text="City Wise"
-                android:layout_weight="0.4"
-                android:gravity="center"
                 android:layout_marginStart="10dp"
-                android:textColor="@color/black"
-                android:backgroundTint="@color/light_purple"
+                android:layout_weight="0.4"
                 android:background="@drawable/bg_button"
+                android:backgroundTint="@color/light_purple"
+                android:gravity="center"
+                android:text="City Wise"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/layout_shipInfo"
 
-                android:textSize="14sp"/>
+                app:layout_constraintTop_toBottomOf="@+id/layout_shipInfo" />
         </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/cv_select"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Select City"
             android:layout_marginTop="20dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            app:shapeAppearance="@style/Rounded"
+            android:hint="Select City"
             app:layout_constraintTop_toBottomOf="@+id/layout_selectWise"
-            >
+            app:shapeAppearance="@style/Rounded">
 
             <AutoCompleteTextView
                 android:id="@+id/autocomplete_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@null"
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:editable="false"
-                android:paddingStart="15dp"
-                android:background="@null" />
+                android:paddingStart="15dp" />
         </com.google.android.material.textfield.TextInputLayout>
+
+
+        <ImageView
+            android:id="@+id/iv_search"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:visibility="gone"
+            app:layout_constraintRight_toRightOf="@+id/cv_select"
+            app:layout_constraintTop_toTopOf="@+id/cv_select"
+            app:layout_constraintBottom_toBottomOf="@+id/cv_select"
+            android:layout_marginEnd="60dp"
+            android:src="@drawable/cancel_icon"
+            />
 
         <TextView
             android:id="@+id/tv_headings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="List of city"
-            android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@+id/cv_select"
             android:layout_marginTop="20dp"
+            android:text="List of city"
             android:textColor="@color/black"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/cv_select" />
 
         <RelativeLayout
             android:id="@+id/layout_result"
             android:layout_width="match_parent"
-            android:visibility="gone"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tv_headings"
             android:layout_marginTop="10dp"
-            android:background="@drawable/border">
+            android:background="@drawable/border"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/tv_headings">
+
             <RelativeLayout
                 android:id="@+id/layout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/tag_boarder"
-                app:layout_constraintTop_toTopOf="parent"
-                >
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:text="State Name"
                     android:layout_centerVertical="true"
-                    android:textSize="12sp"
                     android:layout_marginStart="10dp"
-                    android:textColor="@color/white"/>
+                    android:text="State Name"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
+
                 <View
                     android:id="@+id/view1"
                     android:layout_width="1dp"
                     android:layout_height="34dp"
-                    android:background="@color/black"
+                    android:layout_marginStart="50dp"
                     android:layout_toRightOf="@+id/tv_name"
-                    android:layout_marginStart="50dp"/>
+                    android:background="@color/black" />
+
                 <TextView
                     android:id="@+id/tv_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="No.of City office"
                     android:layout_centerVertical="true"
-
                     android:layout_marginStart="50dp"
+
                     android:layout_toRightOf="@+id/view1"
-                    android:textColor="@color/white"/>
+                    android:text="No.of City office"
+                    android:textColor="@color/white" />
             </RelativeLayout>
+
             <View
                 android:id="@+id/view2"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black"
                 android:layout_below="@+id/layout1"
-                />
+                android:background="@color/black" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_stat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/list_network"
-                android:layout_below="@+id/view2"/>
+                android:layout_below="@+id/view2"
+                tools:listitem="@layout/list_network" />
         </RelativeLayout>
 
 
