Date 08-05-2024 11:11 1. in AnnouncementFragment  change design of items

--- a/app/src/main/res/layout/fragment_locate_parcel.xml
+++ b/app/src/main/res/layout/fragment_locate_parcel.xml
@@ -49,7 +49,7 @@
                     android:textColor="@color/black3"
                     android:textColorHint="@color/gray"
                     android:fontFamily="@font/poppins_regular"
-                    android:hint="Search products..."
+                    android:hint="Search Parcel..."
                     android:layout_marginStart="10dp"/>
 
             </LinearLayout>
