--- a/app/src/main/res/layout/fragment_announcement.xml
+++ b/app/src/main/res/layout/fragment_announcement.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Announcement List"
+            android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="10dp"
             android:textColor="@color/black"
