--- a/app/src/main/res/layout/list_announcement.xml
+++ b/app/src/main/res/layout/list_announcement.xml
@@ -1,53 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginBottom="5dp"
+   >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        android:background="@drawable/border">
-<TextView
-    android:id="@+id/tv_title"
-    app:layout_constraintTop_toTopOf="parent"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    android:text="It is a long estirbalstthest sdfs sddfsddfasdf "
-    android:textColor="@color/darkgray"
-    android:textSize="14sp"
-    android:textStyle="bold"
-    app:layout_constraintBottom_toTopOf="@+id/layout_announceBy"/>
-        <LinearLayout
-            android:id="@+id/layout_announceBy"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        app:cardElevation="5dp"
+        android:layout_margin="4dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:strokeWidth="0dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:weightSum="1">
+            android:padding="0dp">
+
+            <View
+                android:id="@+id/view_line"
+                android:layout_width="5dp"
+                android:layout_height="0dp"
+                android:background="@color/purple"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+
+                />
 
             <TextView
-                android:id="@+id/tv_date"
+                android:id="@+id/tv_title"
                 android:layout_width="0dp"
-                android:layout_weight="0.5"
                 android:layout_height="wrap_content"
-                android:text="On sat,13 march"
-                android:textColor="@color/black"
-                android:textSize="14sp"/>
-            <TextView
-                android:id="@+id/tv_announceBy"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
+                android:layout_marginBottom="6dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="5dp"
+                app:layout_constraintStart_toEndOf="@+id/view_line"
+                android:justificationMode="inter_word"
+                android:text="It is a long estirbalstthest sdfs sddfsddfasdf "
+                android:textColor="@color/black3"
+                android:textSize="13sp"
+                android:textStyle="normal"
+                app:layout_constraintBottom_toTopOf="@+id/layout_announceBy"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/layout_announceBy"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Rakes sharma"
-                android:gravity="end"
-                android:textColor="@color/black"
-                android:textSize="14sp"/>
-        </LinearLayout>
+                android:weightSum="1"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:padding="7dp"
+                    android:layout_marginStart="5dp"
+                    android:text="On sat,13 march"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tv_announceBy"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:gravity="end"
+                    android:textStyle="bold"
+                    android:padding="7dp"
+                    android:text="Rakes sharma"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+            </LinearLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
